<resources>
    <string name="app_name">Triedenie Odpadu Košice</string>
    <string name="app_title_notifikacie">Notifikácie o triedení odpadu</string>
    <string name="app_title_infootriedeni">Informácie o triedení odpadu</string>
    <string name="app_title_mapazbdvorov">Mapa zberných dvorov</string>
    <string name="menu1Notifikacie">Notifikácie o triedení odpadu</string>
    <string name="menu1Informacie">Informácie o triedení odpadu</string>
    <string name="menu1Mapa">Mapa zberných dvorov</string>
    <string name="menu2Notifikacie">Notifikácie o triedení</string>
    <string name="menu2Mesto">Mesto :</string>
    <string name="menu2MestoKe">Košice</string>
    <string name="menu2Ulica">ULICA</string>
    <string name="menu2Cislo">POPISNÉ ČÍSLO</string>
    <string name="menu2DobaNotifikacie">DOBA NOTIFIKÁCIE</string>
    <string name="menu2Dni">(Dní)</string>
    <string name="menu2Patri">Čo patrí do odpadu</string>
    <string name="menu2Nepatri">Čo nepatrí do odpadu</string>
    <string name="menu2Ok">NASTAVIŤ NOTIFIKÁCIU</string>
    <string name="settingsSaved">Nastavenia boli uložené</string>
    <string name="notif_scroll_text">Upozornenie na blížiaci sa odvoz separovaného odpadu.</string>
    <string name="oNas">O nás</string>
    <string name="kontaktujteNas">Kontaktujte nás</string>
    <string name="fivethings">5 Things about Kosice</string>
    <string name="fivethings_text"><b>5 Things about Kosice</b>
        \n\n1. Košice is the second largest city of Slovakia
        \n2. It has population of 240 000
        \n3. In 2013 it was the European Capital of Culture
        \n4. The city has the largest number of protected historical monuments in Slovakia
        \n5. The oldest annual marathon in Europe, Košice Peace Marathon was founded in 1924.
    </string>
    <string name="infoPapier"><b>Čo patrí do kontajnerov na papier:</b>
        \nčasopisy a noviny
        \npapierové vrecúška, krabice (ak nie sú kombinované s iným materiálom hliník, celofán)
        \npapierová lepenka, kartóny...
        \n\n<b>A čo do kontajnerov nedávať:</b>
        \nobaly z kombinovaných materiálov (viacvrstvové obaly od trvanlivého mlieka, džúsov)
        \nzamastený a veľmi znečistený papier
        \nkopírovací a samoprepisovací celofán
</string>
    <string name="infoSklo"><b>Čo patrí do kontajnerov na sklo:</b>
        \nfľaše, poháre, črepy
        \núlomky tabuľového skla
        \n\n<b>A čo do kontajnerov nedávať:</b>
        \nveľmi  znečistené fľaše a sklenené obaly (najmä pieskom)
        \nporcelán a keramika
        \nzrkadlá
        \nžiarovky a žiarivky
        \nautosklo
        \nsklo kombinované s iným materiálom (drôtené sklo)
</string>
    <string name="infoPlastKov"><b>Čo patrí do kontajnerov na plasty a kov:</b>
        \nPET fľaše (minerálky, nealko nápoje…)
        \nfólie, tašky, igelitové vrecká
        \nobaly z kozmetických produktov
        \nplechovky od nápojov, konzervy (bez zvyškov potravín)
        \ndrobné kovové predmety, drôty
        \n\n<b>A čo do kontajnerov nedávať:</b>
        \nobaly z chemikálií
        \npodlahové krytiny
        \nvrstvené obaly
        \npolystyrén
</string>
    <string name="infoAboutUs">
        Sme skupina študentov
    \n študujúcich na akadémii sovy

    </string>
    <string name="infoContactUs">
        Monika Jaššová - monika.jassova@akademiasovy.sk
        \nPatrik Patinák - patri.patinak@akademiasovy.sk
        \nMilos Kočan - milos.kocan@akademiasovy.sk
    </string>
    <string-array name="DobaNotifikacie">
        <item>Vyberte počet dní</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>

    </string-array>
    <string name="placeHolder_popisCislo">Zadajte popisné číslo</string>
</resources>