<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pmm.triedenieodpadukosice.MainActivity">


    <Button
        android:id="@+id/btnMenu2Ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu2Ok"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:theme="@style/MyButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/menu2Ulica"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="32sp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/btnMenu2Ok"
        android:layout_alignStart="@+id/btnMenu2Ok" />

    <Spinner
        android:id="@+id/spinnerUlice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/placeHolder_popisCislo"
        android:inputType="number"
        android:layout_below="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu2DobaNotifikacie"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="normal"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/spinnerUlice"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <Spinner
        android:id="@+id/spinnerDobaNotifikacie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu2Cislo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="32sp"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/spinnerDobaNotifikacie"
        android:layout_alignLeft="@+id/btnMenu2Ok"
        android:layout_alignStart="@+id/btnMenu2Ok" />

</RelativeLayout>